@@ -292,6 +292,7 @@ common.caption.view=View
 common.date=Date
 common.default=Default
 common.delete=Delete
+common.exception.missingparameter=A required parameter is missing from the request: {0}
 common.exception.name=The requested value "{0}" was invalid. It may contain one or more characters which cannot be used in titles.
 common.exception.notopic=Invalid or missing topic name.
 common.exception.novirtualwiki=Invalid or missing virtual wiki.
